// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildCard snapshot test should render "build" type properly 1`] = `
<div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws buildCard StyledProps---background-white--3wQv StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9 StyledProps---margin-top-medium--1XOJ StyledProps---margin-bottom-medium--1zkE"
  >
    <div
      class="topper"
    >
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws leftSide"
      >
        <div
          class="buildTitle"
        >
          <span
            class="bp3-icon bp3-icon-git-commit StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-purple500--2Dre"
            icon="git-commit"
          >
            <svg
              data-icon="git-commit"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                git-commit
              </desc>
              <path
                d="M19 9h-4.1a5 5 0 00-9.8 0H1c-.55 0-1 .45-1 1s.45 1 1 1h4.1a5 5 0 009.8 0H19c.55 0 1-.45 1-1s-.45-1-1-1zm-9 4c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---font-weight-semi-bold--QRXr StyledProps---color--8PuS StyledProps---color-grey800--2G2G"
          >
            b
             | 
             Build ID:
             
            1
          </span>
          <div
            class="status statusSuccess status"
          >
            SUCCESS
          </div>
        </div>
        <a
          class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 Button---link--3a0q StyledProps---main--1Wws links"
          href="f"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            e
          </span>
        </a>
        <span
          class="bp3-icon bp3-icon-git-commit StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey450--3ZoK StyledProps---padding-left-xsmall--34pL StyledProps---padding-right-xsmall--3D04"
          icon="git-commit"
        >
          <svg
            data-icon="git-commit"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              git-commit
            </desc>
            <path
              d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <a
          class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 Button---link--3a0q StyledProps---main--1Wws links"
          href="link"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            commitI
          </span>
        </a>
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws message"
        >
          message
        </p>
      </div>
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws rightSide"
      >
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws wrapper"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws container"
          >
            <button
              class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws btnLeft hidden"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-circle-arrow-left StyledProps---main--1Wws"
                icon="circle-arrow-left"
              >
                <svg
                  data-icon="circle-arrow-left"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    circle-arrow-left
                  </desc>
                  <path
                    d="M11 7H7.41L8.7 5.71c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-3 3C4.11 7.47 4 7.72 4 8c0 .28.11.53.29.71l3 3a1.003 1.003 0 001.42-1.42L7.41 9H11c.55 0 1-.45 1-1s-.45-1-1-1zM8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws graph"
            >
              <span
                class="hidden"
              />
            </div>
            <button
              class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws btnRight hidden"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-circle-arrow-right StyledProps---main--1Wws"
                icon="circle-arrow-right"
              >
                <svg
                  data-icon="circle-arrow-right"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    circle-arrow-right
                  </desc>
                  <path
                    d="M8.71 4.29a1.003 1.003 0 00-1.42 1.42L8.59 7H5c-.55 0-1 .45-1 1s.45 1 1 1h3.59L7.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3-3c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71l-3-3zM8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ"
          />
        </div>
        <div>
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-pause StyledProps---main--1Wws"
              icon="pause"
            >
              <svg
                data-icon="pause"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  pause
                </desc>
                <path
                  d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-stop StyledProps---main--1Wws"
              icon="stop"
            >
              <svg
                data-icon="stop"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  stop
                </desc>
                <path
                  d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
              icon="more"
            >
              <svg
                data-icon="more"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  more
                </desc>
                <path
                  d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="lower"
    >
      <div
        class="creatorInfo"
      >
        <img
          class="avatar"
          src="d"
        />
        <span>
          c
           | 
          trigger
        </span>
      </div>
      <div
        class="duration"
      >
        <div>
          <span
            class="bp3-icon bp3-icon-time StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
            icon="time"
          >
            <svg
              data-icon="time"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                time
              </desc>
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---font-size-xsmall--1f9b StyledProps---color--8PuS StyledProps---color-grey500--3lFR"
          >
            Duration:
             
            0s
          </span>
        </div>
        <div>
          <span
            class="bp3-icon bp3-icon-calendar StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---font-size-xsmall--1f9b StyledProps---color--8PuS StyledProps---color-grey500--3lFR"
          >
            <time
              datetime="1970-01-01T00:00:00.001Z"
              title="1970-01-01 00:00"
            >
              51 years ago
            </time>
          </span>
        </div>
      </div>
      <button
        class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
          icon="chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-down
            </desc>
            <path
              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`BuildCard snapshot test should render "pull_request" type properly 1`] = `
<div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws buildCard StyledProps---background-white--3wQv StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9 StyledProps---margin-top-medium--1XOJ StyledProps---margin-bottom-medium--1zkE"
  >
    <div
      class="topper"
    >
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws leftSide"
      >
        <div
          class="buildTitle"
        >
          <span
            class="bp3-icon bp3-icon-git-branch StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-purple500--2Dre"
            icon="git-branch"
          >
            <svg
              data-icon="git-branch"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                git-branch
              </desc>
              <path
                d="M15 2c-1.66 0-3 1.34-3 3 0 1.3.84 2.4 2 2.82V9c0 1.1-.9 2-2 2H8c-.73 0-1.41.21-2 .55V5.82C7.16 5.4 8 4.3 8 3c0-1.66-1.34-3-3-3S2 1.34 2 3c0 1.3.84 2.4 2 2.82v8.37C2.84 14.6 2 15.7 2 17c0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.25-.77-2.3-1.85-2.75C6.45 13.52 7.16 13 8 13h4c2.21 0 4-1.79 4-4V7.82C17.16 7.4 18 6.3 18 5c0-1.66-1.34-3-3-3zM5 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 16c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zM15 6c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---font-weight-semi-bold--QRXr StyledProps---color--8PuS StyledProps---color-grey800--2G2G"
          >
            b
             | 
             Build ID:
             
            1
          </span>
          <div
            class="status statusSuccess status"
          >
            SUCCESS
          </div>
        </div>
        <span
          class="prBranchName"
        >
          4
        </span>
        <span
          class="bp3-icon bp3-icon-arrow-right StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q StyledProps---padding-left-xsmall--34pL StyledProps---padding-right-xsmall--3D04"
          icon="arrow-right"
        >
          <svg
            data-icon="arrow-right"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              arrow-right
            </desc>
            <path
              d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="prBranchName"
        >
          5
        </span>
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws message"
        >
          2
        </p>
        <a
          class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 Button---link--3a0q StyledProps---main--1Wws links"
          href="1"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            #
             
            1
          </span>
        </a>
        <span
          class="pullRequestStatus"
        >
          open
        </span>
      </div>
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws rightSide"
      >
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws wrapper"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws container"
          >
            <button
              class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws btnLeft hidden"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-circle-arrow-left StyledProps---main--1Wws"
                icon="circle-arrow-left"
              >
                <svg
                  data-icon="circle-arrow-left"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    circle-arrow-left
                  </desc>
                  <path
                    d="M11 7H7.41L8.7 5.71c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-3 3C4.11 7.47 4 7.72 4 8c0 .28.11.53.29.71l3 3a1.003 1.003 0 001.42-1.42L7.41 9H11c.55 0 1-.45 1-1s-.45-1-1-1zM8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws graph"
            >
              <span
                class="hidden"
              />
            </div>
            <button
              class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws btnRight hidden"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-circle-arrow-right StyledProps---main--1Wws"
                icon="circle-arrow-right"
              >
                <svg
                  data-icon="circle-arrow-right"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    circle-arrow-right
                  </desc>
                  <path
                    d="M8.71 4.29a1.003 1.003 0 00-1.42 1.42L8.59 7H5c-.55 0-1 .45-1 1s.45 1 1 1h3.59L7.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3-3c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71l-3-3zM8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ"
          />
        </div>
        <div>
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-pause StyledProps---main--1Wws"
              icon="pause"
            >
              <svg
                data-icon="pause"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  pause
                </desc>
                <path
                  d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-stop StyledProps---main--1Wws"
              icon="stop"
            >
              <svg
                data-icon="stop"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  stop
                </desc>
                <path
                  d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
              icon="more"
            >
              <svg
                data-icon="more"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  more
                </desc>
                <path
                  d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="lower"
    >
      <div
        class="creatorInfo"
      >
        <img
          class="avatar"
          src="d"
        />
        <span>
          c
           | 
          trigger
        </span>
      </div>
      <div
        class="duration"
      >
        <div>
          <span
            class="bp3-icon bp3-icon-time StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
            icon="time"
          >
            <svg
              data-icon="time"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                time
              </desc>
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---font-size-xsmall--1f9b StyledProps---color--8PuS StyledProps---color-grey500--3lFR"
          >
            Duration:
             
            0s
          </span>
        </div>
        <div>
          <span
            class="bp3-icon bp3-icon-calendar StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---font-size-xsmall--1f9b StyledProps---color--8PuS StyledProps---color-grey500--3lFR"
          >
            <time
              datetime="1970-01-01T00:00:00.001Z"
              title="1970-01-01 00:00"
            >
              51 years ago
            </time>
          </span>
        </div>
      </div>
      <button
        class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
          icon="chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-down
            </desc>
            <path
              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
